# Markdown-Graph-MCP

./: .gitignore  README.md  TODO.md  age.py  age_pages.py  config.example.json  countdown.py  logseq_graphs.py  pyproject.toml  server.py
.github/workflows/: tests.yml
docs/adr/: 0001-file-based-positioning.md  0002-entity-reference-convention.md  0003-safer-writes-and-read-only-mode.md  0004-project-rename.md  0005-delete-page-and-auto-backup.md
tests/: conftest.py  test_age.py  test_countdown.py  test_logseq_graphs.py  test_server.py
