[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "markdown-graph-mcp"
version = "0.1.0"
description = "Model Context Protocol server for Logseq-format markdown knowledge graphs"
requires-python = ">=3.11"
dependencies = [
    "markdown-graph-kit @ git+https://github.com/pburney/Markdown-Graph-Kit.git",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = []
