[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "markdown-graph-mcp"
version = "0.1.0"
description = "Model Context Protocol server for Logseq-format markdown knowledge graphs"
requires-python = ">=3.11"
dependencies = [
    "markdown-graph-kit @ git+https://github.com/pburney/Markdown-Graph-Kit.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.setuptools]
packages = []
